# kmath

./: -modules.html  .gitignore  .space.kts  CHANGELOG.md  README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  index.html  navigation.html  package-list  settings.gradle  settings.gradle.kts
.github/: CODEOWNERS
attributes-kt/: README.md  build.gradle.kts
benchmarks/: README.md  build.gradle  build.gradle.kts
buildSrc/: build.gradle.kts  gradle.properties  settings.gradle.kts
common/: build.gradle
doc/: algebra.md  buffers.md  codestyle.md  contexts.md  features.md  linear.md  nd-performance.md  nd-structure.md  operations.md
docs/: README-STUB.md  algebra.md  buffers.md  codestyle.md  contexts.md  expressions.md  features.md  linear.md  nd-structure.md  polynomials.md  readme.md  statistics.md
examples/: README.md  build.gradle  build.gradle.kts  expressions.main.kts
gradle/: artifactory.gradle  bintray.gradle  libs.versions.toml
jvm/: build.gradle
kmath-aida/: build.gradle.kts
kmath-asm/: build.gradle.kts
kmath-ast/: README.md  build.gradle.kts  index.html  navigation.html
kmath-bignum/: build.gradle.kts
kmath-common/: build.gradle
kmath-commons/: README.md  build.gradle.kts  index.html  navigation.html
kmath-commons-rng-part/: build.gradle.kts
kmath-complex/: README.md  build.gradle.kts  index.html  navigation.html
kmath-core/: README.md  build.gradle  build.gradle.kts  index.html  navigation.html
kmath-coroutines/: README.md  build.gradle  build.gradle.kts  index.html  navigation.html
kmath-dimensions/: README.md  build.gradle.kts  index.html  navigation.html
kmath-ejml/: README.md  build.gradle.kts  index.html  navigation.html
kmath-for-real/: README.md  build.gradle.kts  index.html  navigation.html
kmath-functions/: README.md  build.gradle.kts  index.html  navigation.html
kmath-geometry/: README.md  build.gradle.kts  index.html  navigation.html
kmath-gsl/: README.md  build.gradle.kts
kmath-histograms/: README.md  build.gradle.kts  index.html  navigation.html
kmath-io/: build.gradle
kmath-jafama/: README.md  build.gradle.kts  index.html
kmath-jmh/: build.gradle
kmath-jupyter/: README.md  build.gradle.kts  index.html
kmath-jvm/: build.gradle
kmath-koma/: build.gradle.kts
kmath-kotlingrad/: README.md  build.gradle.kts  index.html  navigation.html
kmath-memory/: README.md  build.gradle.kts  index.html  navigation.html
kmath-multik/: README.md  build.gradle.kts  index.html  navigation.html
kmath-nd4j/: README.md  (+3 more)
kmath-noa/src/main/cpp/: CMakeLists.txt  jnoa.cc  space_kscience_kmath_noa_JNoa.h
kmath-torch/ctorch/: CMakeLists.txt
kmath-torch/ctorch/include/: ctorch.h  utils.hh
kmath-torch/ctorch/src/: ctorch.cc
kmath-torch/src/cppMain/: CMakeLists.txt
kmath-torch/src/cppMain/include/: ctorch.h  kscience_kmath_torch_JTorch.h  space_kscience_kmath_torch_JTorch.h  utils.hh
kmath-torch/src/cppMain/src/: ctorch.cc  jtorch.cc
(+10218 files in other folders)
